<resources>
    <string name="app_name">eLegion</string>
    <string name="profile">Профиль</string>
    <string name="home">Главная</string>
    <string name="chats_title">Чаты</string>
    <string name="timetable">Расписание</string>
    <string name="check_list">Чек-Лист</string>
    <string name="check">Check</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_hint">Введите имя</string>
    <string name="userType">Должность</string>
    <string name="telegramHint">Ссылка на ваш телеграм</string>
    <string name="dateHint">Дата рождения</string>
    <string name="done">Готово</string>
    <string name="ok">Ok</string>
    <string name="signOut">Выйти</string>
    <string name="text">Введите текст:</string>
    <string name="registr">зарегистрироваться</string>
    <string name="plan">План развития</string>
    <string name="text_tg">Введите имя канала:</string>
    <string name="calendar">Календарь</string>
    <string name="lern">План развития</string>
    <string name="hintPuturi">Вставьте ссылку на ваш Telegram</string>
    <string name="task">Задача</string>
</resources>