<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigate"
    app:startDestination="@id/item_home">

    <fragment
        android:id="@+id/item_home"
        android:name="com.castprogramms.elegion.ui.main.MainFragment"
        android:label="@string/home"
        tools:layout="@layout/main_fragment" />

    <fragment
        android:id="@+id/item_profile"
        android:name="com.castprogramms.elegion.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/profile_fragment" >
        <action
            android:id="@+id/action_item_profile_to_checkFragment2"
            app:destination="@id/checkFragment" />
    </fragment>
    <fragment
        android:id="@+id/checkFragment"
        android:name="com.castprogramms.elegion.ui.checklist.CheckFragment"
        android:label="@string/check_list" />
        tools:layout="@layout/profile_fragment" />

    <fragment
        android:id="@+id/item_calendar"
        android:name="com.castprogramms.elegion.ui.calendar.CalendarFragment"
        android:label="CalendarFragment" />

    <fragment
        android:id="@+id/item_chats"
        android:name="com.castprogramms.elegion.ui.ChatsFragment"
        android:label="chats_fragment"
        tools:layout="@layout/chats_fragment" />
</navigation>